--- a/hubapp/templates/hubapp/home.html
+++ b/hubapp/templates/hubapp/home.html
@@ -13,6 +13,7 @@
             <a href="{% url 'add' %}" class="tab">Connect</a>
             <a href="{% url 'list' %}" class="tab">Manage</a>
             <a href="{% url 'monitor' %}" class="tab">Monitor</a>
+            <a href="{% url 'news' %}" class="tab">News</a>
         </div>
 
         <div id="nav-search">
