--- a/hubapp/templates/hubapp/edit.html
+++ b/hubapp/templates/hubapp/edit.html
@@ -2,7 +2,8 @@
 
 {% block header %}
     <a href="{% url 'index' %}">Home</a> >
-    <a href="{% url 'list' %}">Manage</a>
+    <a href="{% url 'list' %}">Manage</a> >
+    <a href="">Edit</a>
 {% endblock header %}
 
 {% block title %}
