--- a/hubapp/templates/hubapp/monitor.html
+++ b/hubapp/templates/hubapp/monitor.html
@@ -71,9 +71,9 @@
         <button type="submit" value="btn-reset">Reset</button>
       </div>
     </form>
-  </div>
 
-  <div class="bottom-row">
+
+  <div class="graph-background">
     <div class="left-column">
       <canvas id="barCanvas";></canvas>
     </div>
