--- a/hubapp/templates/hubapp/base.html
+++ b/hubapp/templates/hubapp/base.html
@@ -65,7 +65,7 @@
           <a href="{% url 'index' %}" class="selected">Home</a> |
           <a href="{% url 'contactus' %}">Contact us</a>
         </div>
-        <span><p>Copyright 2021 All Rights Reserved</p></span> |
+        <span>Copyright 2021 All Rights Reserved</span> |
         <span>Icons made by <a href="" title="Good Ware">Good Ware</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></span>
       </div>
 </body>
