--- a/hubapp/templates/hubapp/home.html
+++ b/hubapp/templates/hubapp/home.html
@@ -43,9 +43,9 @@
             <h1>IoT Hub</h1>
             <p>Connect and manage your IoT devices at-scale</p>
               {% if user.is_authenticated  %}
-                <a href="{% url 'signup' %}"><button class="hidden">Create your account →</button></a>
+                <button class="hidden" onclick="location.href='{% url 'signup' %}'">Create your account →</button>
               {% else %}
-                <a href="{% url 'signup' %}"><button>Create your account →</button></a>
+                <button onclick="location.href='{% url 'signup' %}'">Create your account →</button>
               {% endif %}
           </div>
         </div>
@@ -73,7 +73,7 @@
           <a href="{% url 'index' %}" class="selected">Home</a> |
           <a href="{% url 'contactus' %}">Contact us</a>
         </div>
-        <span><p>Copyright 2021 All Rights Reserved</p></span> |
+        <span>Copyright 2021 All Rights Reserved</span> |
         <span>Icons made by <a href="" title="Good Ware">Good Ware</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></span>
       </div>
 </body>
