--- a/hubapp/templates/hubapp/permission.html
+++ b/hubapp/templates/hubapp/permission.html
@@ -13,5 +13,5 @@
 
 {% block content %}
     <p class="italic-text">Access to this page is restricted</p><br>
-    <a href="{% url 'signin' %}">Are you staff?</a>
+    <a href="{% url 'signin' %}">Are you a registered member?</a>
 {% endblock content %}
