--- a/hubapp/templates/hubapp/edit.html
+++ b/hubapp/templates/hubapp/edit.html
@@ -13,9 +13,10 @@
 {% endblock title %}
 
 {% block content %}
-    <form id="edit-form" method="POST">
+    <form id="register-form" method="POST">
         {% csrf_token %}
         {{form.as_p}}
+        <br>
         <input type="submit" value="Submit">
         <input type="reset" value="Cancel">
     </form>
