--- a/hubapp/templates/hubapp/news.html
+++ b/hubapp/templates/hubapp/news.html
@@ -13,18 +13,20 @@
 
 {% block content %}
     {% load static %}
-    <div class="articles-container">
+    <div id="articles-container">
         {% for value in data %}
-        <div class="article-container">
-            <div class="article-top">
-                <div>
-                    <p class="article-title"><a href="{{value.url}}">{{ value.title }}</a></p>
-                    <p class="card-text">{{ value.description }}</p>
-                    <p class="article-date"><small class="text-muted">{{ value.publishedat }}</small></p>
+        <div class="card mb-3 box" >
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <p class="card-title"><a href="{{value.url}}">{{ value.title }}</a></p>
+                        <p class="card-text">{{ value.description }}</p>
+                        <p class="card-text"><small class="text-muted">{{ value.publishedat }}</small></p>
+                    </div>
                 </div>
-            </div>
-            <div class="article-bottom">
-                <img src="{{ value.image }}" class="article-img" alt="this should be a picture...">
+                <div class="col-md-4 img-box">
+                    <img src="{{ value.image }}" class="card-img" alt="this should be a picture...">
+                </div>
             </div>
         </div>
          {% endfor %}
