--- a/hubapp/templates/hubapp/search.html
+++ b/hubapp/templates/hubapp/search.html
@@ -26,12 +26,16 @@
         </thead>
         <tbody>
             {% for device in devices %}
-            <tr>
-                <td>{{device.id}}</td>
-                <td>{{device.device_name}}</td>
-                <td>{{device.device_type}}</td>
-                <td>{{device.device_model}}</td>
-            </tr>
+                {% if device.user_id == request.user.id %}
+                <tr>
+                    <td>{{device.id}}</td>
+                    <td>{{device.device_name}}</td>
+                    <td>{{device.device_type}}</td>
+                    <td>{{device.device_model}}</td>
+                </tr>
+                {% else %}
+                    continue
+                {% endif %}
             {% endfor %}
         </tbody>
     </table>
