--- a/hubapp/templates/hubapp/signup.html
+++ b/hubapp/templates/hubapp/signup.html
@@ -12,17 +12,40 @@
 {% endblock title %}
 
 {% block content %}
-    <form id="register-form" method="POST">
-        {% csrf_token %}
-		<div>Username: {{form.username}}</div>
-        <div>
-            Password: {{form.password1}}<span class="help_text"> Your password must contain at least 8 characters.</span>
-        </div>
-        <div>
-            Password Confirmation: {{form.password2}}<span class="help_text"> Enter the same password as before, for verification.</span>
-        </div>
-        <div>Email Address: {{form.email}}</div>
-        <input type="submit" value="Submit" onclick="send()">
-        <input type="reset" value="Cancel">
-    </form>
+    {% load static %}
+
+        <form class="register-form" method="POST">
+            {% csrf_token %}
+            <div>Username: {{form.username}}</div>
+            <div>
+                Password: {{form.password1}}<span class="help_text"> Your password must contain at least 8 characters.</span>
+            </div>
+            <div>
+                Password Confirmation: {{form.password2}}<span class="help_text"> Enter the same password as before, for verification.</span>
+            </div>
+            <div>Email Address: {{form.email}}</div>
+            <div>First Name: {{form.first_name}}</div>
+            <div>Last Name: {{form.last_name}}</div>
+            <div>Nickname: {{form.nickname}}</div>
+            <div>Gender: {{form.gender}}</div>
+
+            {% if form.errors %}
+               {% for field in form %}
+                      {% for error in field.errors %}
+                            <div class="alert alert-danger">
+                                  <strong>{{ error }}</strong>
+                            </div>
+                      {% endfor %}
+               {% endfor %}
+               {% for error in form.non_field_errors %}
+                      <div class="alert alert-danger">
+                            <strong>{{ error }}</strong>
+                      </div>
+           {% endfor %}
+{% endif %}
+
+            <input type="submit" value="Submit">
+            <input type="reset" value="Cancel">
+        </form>
+
 {% endblock content %}
