--- a/hubapp/templates/hubapp/signup.html
+++ b/hubapp/templates/hubapp/signup.html
@@ -27,7 +27,7 @@
             <div>First Name: {{form.first_name}}</div>
             <div>Last Name: {{form.last_name}}</div>
             <div>Nickname: {{form.nickname}}</div>
-            <div>Gender: {{form.gender}}</div>
+            <div>Profile Character: {{form.profile_character}}</div>
 
             {% if form.errors %}
                {% for field in form %}
